--- a/pom.xml
+++ b/pom.xml
@@ -677,15 +677,17 @@
     </profiles>
 
     <distributionManagement>
-        <snapshotRepository>
-            <id>${distributionManagement.snapshotRepository.id}</id>
-            <url>${distributionManagement.snapshotRepository.url}</url>
-        </snapshotRepository>
-        <repository>
-            <id>${distributionManagement.repository.id}</id>
-            <url>${distributionManagement.repository.url}</url>
-        </repository>
-    </distributionManagement>
+		<repository>
+		  <id>central</id>
+		  <name>a0n5tucjjiuir-artifactory-primary-0-releases</name>
+		  <url>https://ibt.jfrog.io/artifactory/ibt-libs-release</url>
+		</repository>
+		<snapshotRepository>
+		  <id>snapshots</id>
+		  <name>a0n5tucjjiuir-artifactory-primary-0-snapshots</name>
+		  <url>https://ibt.jfrog.io/artifactory/ibt-libs-snapshot</url>
+		</snapshotRepository>
+	  </distributionManagement>
 
     <developers>
         <developer>
